Finish static pages

--- a/app/views/static_pages/contactos.html.erb
+++ b/app/views/static_pages/contactos.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#contactos</h1>
-<p>Find me in app/views/static_pages/contactos.html.erb</p>
+<% provide(:title, 'Contactos') %>
+
+<h1>Contactos</h1>
+<p>Contacte-nos</p>
+<p>
+   	<a href="http://pt.linkedin.com/in/diogocsc">Diogo Cordeiro</a>.
+</p>
+<p>
+   	<a href="http://www.quora.com/Escrita-Inteligente-LDA/followers#">Escrita Inteligente, Lda</a>.
+</p>
