--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+
+<h1>Bem Vindo a Recibos Online</h1>
+
+<p>
+	Esta é a página de entrada de
+	<a href=" http://www.recibo.pt">Recibos Online</a>.
+</p>	
