--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -172,9 +172,9 @@ input {
 	@extend .error;
 }
 
-/* users index */
+/* shops index */
 
-.users {
+.shops {
   list-style: none;
   margin: 0;
   li {
