--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,8 @@
             <ul class="nav pull-right">
               <li><%= link_to "Home",      root_path %></li>
               <li><%= link_to "Contactos", contactos_path %></li>
-              <li><%= link_to "Lojas",     '#' %></li>
+              <li><%= link_to "Lojas",     shops_path %></li>
+              <li><%= link_to "Pesquisa", pesquisa_path%></li>
             </ul>
           </nav>
         </div>
