--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "recibos online", '#', id: "logo" %>
+          <%= link_to "recibos online", root_path, id: "logo" %>
           <nav>
             <ul class="nav pull-right">
               <li><%= link_to "Home",      root_path %></li>
               <li><%= link_to "Contactos", contactos_path %></li>
-              <li><%= link_to "Lojas",     shops_path %></li>
+              <li><%= link_to "Lojas",     lojas_path %></li>
               <li><%= link_to "Pesquisa", pesquisa_path%></li>
             </ul>
           </nav>
