--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -2,7 +2,7 @@
 <h1>Shops</h1>
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@shop) do |f| %>
+    <%= form_for(:shop, url: shops_path) do |f| %>
     <%= render 'shared/error_messages' %>
 
       <%= f.label :name %>
